[gd_scene load_steps=7 format=3 uid="uid://b21pqknq7i2xa"]

[ext_resource type="Script" uid="uid://blllm38qpqbc3" path="res://dialog_manager/bubble/dialog_bubble.gd" id="1_4fcfv"]
[ext_resource type="Theme" uid="uid://b4e32g31xbiik" path="res://assets/theme/dialog_theme.tres" id="1_7grl3"]
[ext_resource type="Texture2D" uid="uid://7ovo60wq83uk" path="res://assets/img/ui/dialog_pointer.png" id="3_2gkh8"]

[sub_resource type="Animation" id="Animation_ptk6g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2gkh8"]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wa8pd"]
_data = {
&"RESET": SubResource("Animation_ptk6g"),
&"fade_in": SubResource("Animation_2gkh8")
}

[node name="DialogBubble" type="CanvasLayer"]
script = ExtResource("1_4fcfv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wa8pd")
}
autoplay = "fade_in"

[node name="BackgroundBtn" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Marker" type="Marker2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)

[node name="PanelContainer" type="PanelContainer" parent="Marker"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.5
offset_top = -13.0
offset_right = 31.5
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("1_7grl3")

[node name="ContentContainer" type="VBoxContainer" parent="Marker/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="Marker/PanelContainer/ContentContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 5)
layout_mode = 2
text = "Hallo Bert"
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Marker/PanelContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = -11

[node name="PointerTop" type="TextureRect" parent="Marker/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("3_2gkh8")
stretch_mode = 5
flip_v = true

[node name="MarginContainer2" type="MarginContainer" parent="Marker/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_bottom = -11

[node name="PointerBottom" type="TextureRect" parent="Marker/PanelContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("3_2gkh8")
stretch_mode = 5

[connection signal="pressed" from="BackgroundBtn" to="." method="_on_background_btn_pressed"]
